--- a/kankan/pages/transaction/payment.html
+++ b/kankan/pages/transaction/payment.html
@@ -38,11 +38,11 @@
 		</header>
 		<div id="reloadpage" onclick="reloadpage()" style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div>
 		<div class="mui-content" style="padding-top: 0;">
-		    <div class="contentTop" style="height: 100px; background-color: #FFFFFF;">
-		    	<div id="comm_image" class="mui-pull-left mui-col-xs-4" style="width: 100px; height: 100px;">
+		    <div class="contentTop" style="height: 6em; background-color: #FFFFFF;">
+		    	<div id="comm_image" class="mui-pull-left mui-col-xs-4" style="width: 6em; height: 6em;">
 		    		<!--<img id="comm_img" style="" src="../../images/logo.png">-->
 		    	</div>
-		    	<div class="mui-pull-left mui-col-xs-7" style="height: 100px;display: flex;align-items: center;margin-left: 1em;">
+		    	<div class="mui-pull-left mui-col-xs-7" style="height: 6em;display: flex;align-items: center;margin-left: 1em;">
 		    		<span id="comm_name"></span>
 		    	</div>
 		    </div>
@@ -90,7 +90,7 @@
 			mui.init({
 				
 			});
-			var showimgWidth = parseInt($(window).width()) / 2 - 80;
+			var showimgWidth = parseInt($(window).width()) / 2 - 78;
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
 				trans_id = self.transid;
