--- a/kankan/pages/transaction/seller_account.html
+++ b/kankan/pages/transaction/seller_account.html
@@ -3,7 +3,7 @@
     <head>
 		<meta charset="utf-8">
 		<title>sell_account.html</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css" />
@@ -29,7 +29,7 @@
 				<div class="tradeFees" style="margin-top: 2em;">
 					<ul class="mui-table-view ka_prologbox">
 						<li class="mui-table-view-cell" style="display: -webkit-box;">
-						    <div class="mui-col-xs-9 mui-pull-left lang" data-locale="account_type"></div>
+						    <div class="mui-col-xs-6 mui-pull-left lang" data-locale="account_type"></div>
 						    <div id="accountResults" class="lang" data-locale="selecttype" style="margin-right: 0.5em;"></div>
 					        <input type="hidden" name="accountSelect" id="accountSelect" value="" />
 						</li>
