--- a/kankan/pages/transaction/seller_account.html
+++ b/kankan/pages/transaction/seller_account.html
@@ -68,7 +68,7 @@
 				<div class="lang accountDesc" data-locale="account_descriptionOne"></div>
 				<div class="lang" style="margin: 0 1em" data-locale="account_descriptionTwo"></div>
 				<div class="ka_userbox">
-					<button type="button" class="mui-btn mui-btn-red ka_prologsure lang" data-locale="next" style="margin-top: 1em;" onclick="finish()" id=""></button>
+					<button type="button" class="mui-btn mui-btn-red ka_prologsure lang" data-locale="next" style="margin-top: 1em;" onclick="finish()"></button>
 				</div>
 			</form>
 		</div>
@@ -140,7 +140,7 @@
 					    wheels: branchData,
 					    position:branchposition+",",
 					    transitionEnd:function(indexArr, data){
-					    	if(indexArr=="NAN"){
+					    	if(isNaN(indexArr[0])){
 					    		indexArr=branchposition;
 					    	}
 					        console.log(indexArr);
@@ -157,7 +157,7 @@
 					    wheels: accountData,
 					    position:accountposition+",",
 					    transitionEnd:function(indexArr, data){
-					    	if(indexArr=="NAN"){
+					    	if(isNaN(indexArr[0])){
 					    		indexArr=accountposition;
 					    	}
 					        console.log(indexArr);
@@ -182,6 +182,9 @@
 		});
 		//get position
 		function childrentext(childredarr,value) {
+			if (typeof(value) == "undefined") {
+				return 0;
+			}
 			for(var chd in childredarr) {
 				if(childredarr[chd].value == value) {
 					return chd;
@@ -253,30 +256,35 @@
 					duration: 'long',
 					type: 'div'
 				});
+				return;
 			}
 			if (account_type == "") {
 				mui.toast(TextMessage.pleaseAccount, {
 					duration: 'long',
 					type: 'div'
 				});
+				return;
 			}
 			if (branch_number == "") {
 				mui.toast(TextMessage.branchNumberNull, {
 					duration: 'long',
 					type: 'div'
 				});
+				return;
 			}
 			if (account_number == "") {
 				mui.toast(TextMessage.accountNumberNull, {
 					duration: 'long',
 					type: 'div'
 				});
+				return;
 			}
 			if (surname == "" || name == "") {
 				mui.toast(TextMessage.namenotnull, {
 					duration: 'long',
 					type: 'div'
 				});
+				return;
 			}
 			var params = {
 				"bank_code": bank_code,
