--- a/kankan/pages/main/products/requestlist.html
+++ b/kankan/pages/main/products/requestlist.html
@@ -97,8 +97,8 @@
 					var comm_name=HTMLDecode(trans[0].comm_name);
 					var html = new Util.StringBuilder();
 					html.appendFormat('<li class="mui-row mui-table-view-cell transli" style="width:100%; height: 76px;"><a class="mui-navigate-right" id="{0}"><div class="mui-pull-left mui-col-xs-2"><img class="lazy" data-original="{1}" style="width: 60px;max-height: 60px;"></div>',trans_id,comm_img)
-						.appendFormat('<div style="text-overflow: ellipsis;overflow: hidden;" class="mui-pull-left mui-col-xs-4 requestbox">{0}<div style="text-align:left;"><font color="#0062CC">&yen;{1}</font></div></div>',comm_name,price)
-						.appendFormat('<div style="margin-left: 0.5rem;" class="mui-pull-left mui-col-xs-5 ka_userbox"><div class="{0}">{1}</div></div></a></li>',trstatus=="3" ? "requestsuccess":"requeststop",status);
+						.appendFormat('<div style="text-overflow: ellipsis;overflow: hidden;" class="mui-pull-left mui-col-xs-3 requestbox">{0}<div style="text-align:left;"><font color="#0062CC">&yen;{1}</font></div></div>',comm_name,price)
+						.appendFormat('<div style="" class="mui-pull-left mui-col-xs-5 ka_userbox"><div class="{0}">{1}</div></div></a></li>',trstatus=="3" ? "requestsuccess":"requeststop",status);
 					$("#historyUl").append(html.toString());
 					lazyload();
 					$("#historyshow").show();
